# Zonos-TTS

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml
models/Zonos-v0.1-hybrid/: config.json
web/: ZonosTTS.js  zonos_tts.js
